[package]
name = "wda"
version = "0.5.0"
authors = ["Michael Lee <micl2e2@proton.me>"]
edition = "2021"
description = "Make web browser automation painless."
repository = "http://github.com/micl2e2/wda"
documentation = "http://docs.rs/wda"
license = "MIT OR GPL-3.0-or-later"
keywords = ["automation", "webdriver", "browser"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["firefox"]
firefox = ["wdc/firefox"]
chromium = ["wdc/chromium"]
extra_auto = ["dep:image"]
dev = []
# dev = ["wdc/dev"] # DEBUG ONLY

[dependencies]
wdc = { version = "0.1.0-beta8", features = [] }
base64 = "0.21.0"
libc = "0.2.142"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
winapi = { version = "0.3.9", features = ["fileapi", "std", "impl-default", "errhandlingapi"] }
image = { version = "0.24.6", optional = true }
curl = { version = "0.4.44", default-features = false, features = ["static-curl", "rustls"] }
flate2 = "1.0.26"
tar = "0.4.39"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
regex = "1.8.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[profile.release]
strip = "symbols"